Añado busquedda de producto por IdEntidad